force-app/main/default/objects/State_Comp_Code__c/State_Comp_Code__c.object-meta.xml
<CustomObject>
    <label>State Comp Code</label>
    <nameField>
        <label>State Comp Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Comp Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>