force-app/main/default/objects/State_Comp_Code__c/fields/Code_Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Name_Description__c</fullName>
    <formula>IF(
ISBLANK( Description__c) , WC_Code__r.Name &amp; &quot; - &quot; &amp;  WC_Code__r.Description__c,  WC_Code__r.Name &amp; &quot; - &quot; &amp; Description__c)</formula>
    <label>Code Name/Description</label>
    <type>Text</type>
</CustomField>