force-app/main/default/objects/State_Comp_Code__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>State Comp Codes</relationshipLabel>
    <relationshipName>State_Comp_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>