force-app/main/default/objects/State_Comp_Code__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>State__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Code</label>
    <type>Text</type>
</CustomField>