force-app/main/default/objects/State_Comp_Code__c/fields/State_Comp_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Comp_Code_Id__c</fullName>
    <externalId>true</externalId>
    <label>State Comp Code Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>