force-app/main/default/objects/State_Comp_Code__c/fields/WC_Code__c.field-meta.xml
<CustomField>
    <fullName>WC_Code__c</fullName>
    <label>WC Code</label>
    <referenceTo>WC_Code__c</referenceTo>
    <relationshipLabel>State Comp Codes</relationshipLabel>
    <relationshipName>State_Comp_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>