force-app/main/default/objects/State_Comp_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WC_Code__c</columns>
    <columns>Description__c</columns>
    <columns>State__c</columns>
    <columns>Code_Name_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>